<resources>
    <string name="app_name">SP20_BSE_009_ROOM_API</string>
    <string name="marital_status">Marital Status</string>
    <string name="single">Single</string>
    <string name="married">Married</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
</resources>